Basic structure in place.  Debugging needed.

--- a/002-grid-axis/index.html
+++ b/002-grid-axis/index.html
@@ -1,34 +1,26 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <script src="a.out.js"></script>
 
+        <script src="p5.min.js"></script>
+
+        <script src="a.out.js"></script>
+        
         <script>
-/*
-            function writeFib ( fib )
-            {
-                for ( let i=0; i<46; i++ )
-                {
-                    document.getElementById ( "output" ).
-                        innerHTML += fib ( i ) + "<br \\>";
-                }
-            }
 
             Module.onRuntimeInitialized = _ =>
             {
-                const fib = Module.cwrap ( 'fib', 'number', [ 'number' ]);
-
-                console.log ( fib ( 12 ) );
-
-                writeFib ( fib );
+                const gridF = Module.cwrap ( 'f', 'number', 
+                                                  [ 'number', 'number' ]);
             };
-*/
+
         </script>
+
+        <script src="sketch.js"></script>
+
     </head>
         
     <body>
-        <p>Hello</p>
-
         <p id="output"></p>
     </body>
 </html>
