Managed to call gridF from p5js

--- a/002-grid-axis/index.html
+++ b/002-grid-axis/index.html
@@ -12,7 +12,7 @@
 
             Module.onRuntimeInitialized = _ =>
             {
-                const gridF = Module.cwrap ( 'gridF', 'number', 
+                window.gridF = Module.cwrap ( 'gridF', 'number', 
                                                   [ 'number', 'number' ]);
                 
                 const sketch = new p5 ( window.p5js_sketch.grid_p5 );
