Basic bones of the navigation controls.

--- a/003-mandelbrot/index.html
+++ b/003-mandelbrot/index.html
@@ -22,9 +22,18 @@
 
         </script>
 
+        
+
     </head>
         
     <body>
-        <p id="output"></p>
+      <div id="renderOptions">
+          <form>
+              TargetX: <input type="text" name="fname"><br />
+              TargetX: <input type="text" name="fname"><br />
+              <input type="submit" value="Submit" />
+          </form>
+
+      </div>
     </body>
 </html>
