--- a/003-mandelbrot/index.html
+++ b/003-mandelbrot/index.html
@@ -36,22 +36,22 @@
             <form>
                 <p>
                     <label>TargetX</label>
-                    <input type="text" name="fname"><br />
+                    <input type="text" name="fname">
                 </p>
                 <p>
                     <label>TargetY</label>
-                    <input type="text" name="fname"><br />
+                    <input type="text" name="fname">
                 </p>
                 <p>
                     <label>Range</label>
-                    <input type="text" name="fname"><br />
+                    <input type="text" name="fname">
                 </p>
                 <p>
                     <label>Iterations</label>
-                    <input type="text" name="fname"><br />
+                    <input type="text" name="fname">
                 </p>
                
-                <input type="submit" value="Submit" />
+                <input type="submit" value="Render" />
                 
             </form>
 
