--- a/003-mandelbrot/index.html
+++ b/003-mandelbrot/index.html
@@ -7,6 +7,7 @@
         <script src="a.out.js"></script>
         
         <script src="sketch.js"></script>
+        <script src="sketch_params.js"></script>
 
         <script>
 
