Update form fileds with current data.

--- a/003-mandelbrot/index.html
+++ b/003-mandelbrot/index.html
@@ -25,6 +25,8 @@
                 
 
                 const sketch = new p5 ( window.p5js_sketch.grid_p5 );
+
+                p5js_sketch.updateParamForm ();
             };
 
         </script>
