Copied grid.c and created canvas.

--- a/004-grid-axis-pixi/index.html
+++ b/004-grid-axis-pixi/index.html
@@ -18,6 +18,14 @@
 
             PIXI.utils.sayHello ( type );
 
+            let app = new PIXI.Application (
+                {
+                    width  : 800,
+                    height : 800
+                });
+
+            document.body.appendChild ( app.view );
+
         </script>
 
         <p>
