--- a/004-grid-axis-pixi/index.html
+++ b/004-grid-axis-pixi/index.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        
         <script src="pixi.js" ></script>
+
+        <script src="pixi_grid.js" ></script>
+
+        <script src="a.out.js" ></script>
+
         <title>Hello</title>
     </head>
     <body>
