--- a/004-grid-axis-pixi/index.html
+++ b/004-grid-axis-pixi/index.html
@@ -32,6 +32,8 @@
 
             document.body.appendChild ( app.view );
 
+            window.pixi_grid.init ( PIXI, app );
+
         </script>
 
         <p>
