--- a/006-cellular-automata/index.html
+++ b/006-cellular-automata/index.html
@@ -7,7 +7,7 @@
 
         <script src="vue.js" ></script>
 
-        <script src="pixi_noise.js" ></script>
+        <script src="pixi_cellular_automata.js" ></script>
 
         <script src="a.out.js" ></script>
 
@@ -19,11 +19,11 @@
 
             Module.onRuntimeInitialized = _ =>
             {
-                window.pixi_noise.init_webasm ( Module );
+                window.pixi_cellular_automata.init_webasm ( Module );
 
-                window.pixi_noise.init_pixi ( PIXI, document );
+                window.pixi_cellular_automata.init_pixi ( PIXI, document );
 
-                window.pixi_noise.init_vue ( Vue );
+                window.pixi_cellular_automata.init_vue ( Vue );
             };
 
         </script>
