--- a/006-cellular-automata/index.html
+++ b/006-cellular-automata/index.html
@@ -9,6 +9,8 @@
 
         <script src="pixi_cellular_automata_init.js" ></script>
 
+        <script src="pixi_cellular_automata_main_loop.js" ></script>
+
         <script src="pixi_cellular_automata_form_handlers.js" ></script>
 
         <script src="a.out.js" ></script>
