Deleted old textures - memory leak.

--- a/006-cellular-automata/index.html
+++ b/006-cellular-automata/index.html
@@ -34,7 +34,7 @@
         </script>
 
         <div id="ca_control" >
-            <input type="range" v-model="spont" width="800px" class="slider"></input>
+            <input type="range" v-model="spont" width="800px" class="slider" />
             <p>{{scaled_spont}}</p>
         </div>
     </body>
