Play button working - early version
Should rewrite to use a sim input handler like sim_spont

--- a/006-cellular-automata/index.html
+++ b/006-cellular-automata/index.html
@@ -34,8 +34,13 @@
         </script>
 
         <div id="ca_control" >
+
+            <button v-on:click="pause">{{ pause_button_text }}</button>
+
             <input type="range" v-model="spont" width="800px" class="slider" />
+
             <p>{{scaled_spont}}</p>
+
         </div>
     </body>
 </html>
